--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,12 +1,12 @@
     #speava_session_notification {
-        color: #FFFFFF !important;
+        /*color: #FFFFFF !important;*/
         margin-top: 10px !important;
         z-index: 102 !important;
     }
 
     #speava_session_notification.display_dialog {
         visibility: visible !important;
-        color: #FFFFFF !important;
+        /*color: #FFFFFF !important;*/
         margin-top: 10px !important;
     }
 
@@ -15,13 +15,13 @@
         visibility: hidden !important;
     }
     #speava_session_notification.option_notification {
-        color: rgba(255, 255, 255, 0.5) !important;
+        /*color: rgba(255, 255, 255, 0.5) !important;*/
         font-size: 12px  !important;
         visibility: visible !important;
     }
 
     #speava_caption_reaction {
-        color: rgba(255, 255, 255, 0.5) !important;
+        /*color: rgba(255, 255, 255, 0.5) !important;*/
         font-size: 24px !important;
         z-index: 120 !important;
         tab-index: 3;
@@ -31,7 +31,7 @@
     }
 
     #speava_textarea {
-        color : #FFFFFF;
+        /*color : #FFFFFF;*/
         position : absolute;
         width: 300px;
         z-index: 101;
@@ -40,7 +40,7 @@
         visibility: hidden !important;
     }
     #speava_textarea.option_notification {
-        color: rgba(255, 255, 255, 0.5) !important;
+        /*color: rgba(255, 255, 255, 0.5) !important;*/
         font-size: 12px  !important;
     }
 
@@ -49,41 +49,41 @@
     }
 
     .item {
-        color : #FFFFFF;
+        /*color : #FFFFFF;*/
         font-size : 12px;
         z-index: 101;
         display:inline-block;
     }
     .head {
-        color : #FFFFFF;
+        /*color : #FFFFFF;*/
         font-size : 24px;
         z-index: 101;
         display:inline-block;
     }
 
     .item_blue {
-        color : #FFFFFF;
+        /*color : #FFFFFF;*/
         background-color : darkblue !important;
         font-size : 24px;
         display:inline-block;
     }
 
     .item_red {
-        color : #FFFFFF;
+        /*color : #FFFFFF;*/
         background-color : indianred !important;
         font-size : 24px;
         display:inline-block;
     }
 
     .text_item {
-        color : #FFFFFF;
+        /*color : #FFFFFF;*/
         font-size : 24px;
         /*line-height: 12px;*/
         display:inline-block;
     }
 
     .text_head {
-        color : #FFFFFF;
+        /*color : #FFFFFF;*/
         /*line-height: 24px;*/
         font-size : 48px;
         display:inline-block;
