--- a/templates/get_vocab_list_result.html
+++ b/templates/get_vocab_list_result.html
@@ -5,6 +5,7 @@
     <title>Extract vocab from a page</title>
 </head>
 <body>
+<a href="/">Show start page</a>
 <b>URL:</b><br> {{url}}
 <br>
 <b>Title:</b><br> {{title}}
