--- a/templates/lca_index.html
+++ b/templates/lca_index.html
@@ -5,27 +5,26 @@
     <title>Authentication</title>
 </head>
 <body>
+<div><span>userid:</span><span>{{userid}}</span></div>
+<div><span>given_name:</span><span>{{given_name}}</span></div>
+<div><span>email:</span><span>{{email}}</span></div>
+
 <table>
 <tr><td><a href="/">Show start page</a></td>
 <td>Show start page</td></tr>
 
 <tr><td><a href="/test">Authenticate</a></td>
-<td>Submit an API request and see a formatted JSON response.
-    Go through the authorization flow if there are no stored
-    credentials for the user.</td></tr>
-<tr><td><a href="/authorize">Test the auth flow directly</a></td>
-<td>Go directly to the authorization flow. If there are stored
-    credentials, you still might not be prompted to reauthorize
-    the application.</td></tr>
+<td>Authenticate you by permitting access to your Google account. After you authenticate yourself, site will stop asking for your permission.</td></tr>
+<tr><td><a href="/authorize">Authenticate (force authentication process to choose an account)</a></td>
+<td>Choose an account to authenticate. You will be prompted to reauthorize the application.</td></tr>
 <tr><td><a href="/revoke">Revoke current credentials</a></td>
 <td>Revoke the access token associated with the current user
-    session. After revoking credentials, if you go to the test
+    session. After revoking credentials, if you go to the "Authenticate"
     page, you should see an <code>invalid_grant</code> error.
 </td></tr>
-<tr><td><a href="/clear">Clear Flask session credentials</a></td>
-<td>Clear the access token currently stored in the user session.
-    After clearing the token, if you <a href="/test">test the
-    API request</a> again, you should go back to the auth flow.
+<tr><td><a href="/clear">Clear session credentials</a></td>
+<td>Clear the authentication information currently stored for your session.
+    After clearing it, if you <a href="/test">Authenticate</a> again, you will be prompted to choose an account.
 </td></tr></table>
 
 </body>
