--- a/templates/lca_toppage.html
+++ b/templates/lca_toppage.html
@@ -9,8 +9,14 @@
 <div><span>userid:</span><span>{{userid}}</span></div>
 <div><span>given_name:</span><span>{{given_name}}</span></div>
 <div><span>email:</span><span>{{email}}</span></div>
+<div><span>expires in (seconds):</span><span>{{expires_in}}</span></div>
 
 <div><a href="/lca/sample_speaking_session">Click here</a> to start browser-based session</div>
-<div><a href="/index">Click here</a> to start authentication process</div>
+<div><a href="/personalize_session_settings">Click here</a> to personalize session</div>
+<div><a href="/personalize_session">Click here</a> to personalize session to import from resources</div>
+<div><a href="/get_vocab">Click here</a> to load vocabulary from a URL resource</div>
+<div><a href="/list_session">Click here</a> to list sessions</div>
+<div><a href="/get_vocab">Click here</a> to get text from a site</div>
+<div><a href="/index">Click here</a> to authenticate yourself <b>(click this first to start other activities)</b></div>
 </body>
 </html>
