--- a/templates/lca_toppage.html
+++ b/templates/lca_toppage.html
@@ -14,8 +14,11 @@
 <div><a href="/lca/sample_speaking_session">Click here</a> to start browser-based session</div>
 <div><a href="/personalize_session_settings">Click here</a> to personalize session</div>
 <div><a href="/personalize_session">Click here</a> to personalize session to import from resources</div>
+<div><a href="/personalize_session_authorization">Click here</a> to create token to session or add user emails</div>
+<div><a href="/personalize_session_accept_authorization">Click here</a> to accept invited emails</div>
 <div><a href="/get_vocab">Click here</a> to load vocabulary from a URL resource</div>
 <div><a href="/list_session">Click here</a> to list sessions</div>
+<div><a href="/personalize_calling_function">Click here</a> to choose what to show</div>
 <div><a href="/index">Click here</a> to authenticate yourself <b>(click this first to start other activities)</b></div>
 </body>
 </html>
