--- a/templates/lca_toppage.html
+++ b/templates/lca_toppage.html
@@ -10,8 +10,8 @@
 <div><span>given_name:</span><span>{{given_name}}</span></div>
 <div><span>email:</span><span>{{email}}</span></div>
 <div><span>expires in (seconds):</span><span>{{expires_in}}</span></div>
-
-<div><a href="/lca/sample_speaking_session">Click here</a> to start browser-based session</div>
+<div><a href="/run_on_server">Click here</a> to start browser-based session (without extension)</div>
+<div><a href="/lca/sample_speaking_session">Click here</a> to start browser-based session (with extension)</div>
 <div><a href="/personalize_session_settings">Click here</a> to personalize session</div>
 <div><a href="/personalize_session">Click here</a> to personalize session to import from resources</div>
 <div><a href="/personalize_session_authorization">Click here</a> to create token to session or add user emails</div>
