--- a/templates/lca_toppage.html
+++ b/templates/lca_toppage.html
@@ -10,15 +10,15 @@
 <div><span>given_name:</span><span>{{given_name}}</span></div>
 <div><span>email:</span><span>{{email}}</span></div>
 <div><span>expires in (seconds):</span><span>{{expires_in}}</span></div>
-<div><a href="/run_on_server">Click here</a> to start browser-based session (without extension)</div>
-<div><a href="/lca/sample_speaking_session">Click here</a> to start browser-based session (with extension)</div>
-<div><a href="/personalize_session_settings">Click here</a> to personalize session</div>
-<div><a href="/personalize_session">Click here</a> to personalize session to import from resources</div>
-<div><a href="/personalize_session_authorization">Click here</a> to create token to session or add user emails</div>
-<div><a href="/personalize_session_accept_authorization">Click here</a> to accept invited emails</div>
-<div><a href="/get_vocab">Click here</a> to load vocabulary from a URL resource</div>
-<div><a href="/list_session">Click here</a> to list sessions</div>
-<div><a href="/personalize_calling_function">Click here</a> to choose what to show</div>
 <div><a href="/index">Click here</a> to authenticate yourself <b>(click this first to start other activities)</b></div>
+<div><a href="/personalize_session_accept_authorization" target="_blank" rel="noopener noreferrer">Click here</a> to accept invited emails</div>
+<div><a href="/list_session" target="_blank" rel="noopener noreferrer">Click here</a> to list sessions</div>
+<div><a href="/personalize_calling_function" target="_blank" rel="noopener noreferrer">Click here</a> to choose what to show</div>
+<div><a href="/get_vocab" target="_blank" rel="noopener noreferrer">Click here</a> to load vocabulary from a URL resource</div>
+<div><a href="/lca/sample_speaking_session" target="_blank" rel="noopener noreferrer">Click here</a> to start browser-based session (with extension)</div>
+<div><!--a href="/run_on_server">Click here</a-->(obsolete) start browser-based session (without extension)</div>
+<div><!--a href="/personalize_session_settings">Click here</a-->(obsolete) personalize session</div>
+<div><!--a href="/personalize_session">Click here</a-->(obsolete) personalize session to import from resources</div>
+<div><!--a href="/personalize_session_authorization">Click here</a-->(obsolete) create token to session or add user emails</div>
 </body>
 </html>
