--- a/templates/personalize_session_settings.html
+++ b/templates/personalize_session_settings.html
@@ -19,11 +19,22 @@
 <div><span>email:</span><span>{{email}}</span></div>
 <form action="/personalize_session_settings" method="POST" enctype="multipart/form-data">
 <div>
-    <span>
 <b>Session:</b>
-        <input style="width:30%" type="text" name="session_id" value="{{session_id}}" onchange="clear_textareas();"><br>
+        <input style="width:30%" type="text" id="session_id" name="session_id" value="{{session_id}}" readonly="readonly" onchange="clear_textareas();"><br>
     </span>
 </div>
+<div>
+    <span>
+<b>Internal session id:</b>
+        <input style="width:30%" type="text" name="internal_session_id" value="{{internal_session_id}}" onchange="clear_textareas();"><br>
+    </span>
+</div>
+<!--<div>-->
+<!--    <span>-->
+<!--<b>Session:</b>-->
+<!--        <input style="width:30%" type="text" name="session_id" value="{{session_id}}" onchange="clear_textareas();"><br>-->
+<!--    </span>-->
+<!--</div>-->
 <div>
     <span>
 <b>username:</b>
