--- a/templates/show_all.html
+++ b/templates/show_all.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/static/css/style.css">
     <title>All results</title>
 </head>
-<body style="background-color: #a9a9a9;">
+<body style="background-color: #000000;color:white">
 
 {% autoescape false %}
 {% for item in data: %}
